* Contrast fixes for the RS player buttons * Added speed slider back and added styles to it

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/base/colors.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/base/colors.scss
@@ -78,6 +78,7 @@ $color-ceepos-card-shadow: rgb(0 0 0 / 5%);
 
 // ReadSPeaker
 $color-readspeaker-selected: #29b0c4;
+$color-readspeaker-icon: #737373;
 
 // Meta
 $color-meta-workspace-background: $color-default;
